@@ -15,14 +15,27 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>exec-maven-plugin</artifactId> 
+				<version>1.2.1</version> <configuration> <mainClass>hack.InstanceHelper</mainClass> 
+				</configuration> </plugin> -->
 			<plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.2.1</version>
-                <configuration>
-                    <mainClass>hack.InstanceHelper</mainClass>
-                </configuration>
-            </plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<configuration>
+					<executable>java</executable>
+					<arguments>
+						<argument>-Xms6g</argument>
+						<argument>-Xmx6g</argument>
+<!-- 						<argument>-XX:NewRatio=3</argument> -->
+						<argument>-XX:+PrintGCTimeStamps</argument>
+						<argument>-XX:+UseParallelGC</argument>
+						<argument>-Xloggc:gc.log</argument>
+						<argument>-classpath</argument>
+						<classpath />
+						<argument>hack.InstanceHelper</argument>
+					</arguments>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -39,5 +52,5 @@
 		</dependency>
 
 	</dependencies>
-	
+
 </project>
